Confirmed newer `grub-mkstandalone` option

--- a/README.org
+++ b/README.org
@@ -98,9 +98,7 @@ GRUB_DISABLE_SUBMENU=y
 #+end_example
 #+begin_src sh
 grub-mkconfig -o boot/grub/grub.cfg
-# if -C option does not exist, try --compress or --core-compress... This seems to have changed
-# in recent GRUB2:
-grub-mkstandalone -o boot.efi -d usr/lib/grub/x86_64-efi -O x86_64-efi -C xz boot/grub/grub.cfg
+grub-mkstandalone -o boot.efi -d usr/lib/grub/x86_64-efi -O x86_64-efi --compress=xz boot/grub/grub.cfg
 #+end_src
 *** 12. Setup boot in OS X
 Exit everything and reboot into OS X (by holding alt/option) and
