Copying boot.efi to Boot Loader partition

--- a/README.org
+++ b/README.org
@@ -100,6 +100,7 @@ GRUB_DISABLE_SUBMENU=y
 grub-mkconfig -o boot/grub/grub.cfg
 grub-mkstandalone -o boot.efi -d usr/lib/grub/x86_64-efi -O x86_64-efi --compress=xz boot/grub/grub.cfg
 #+end_src
+Copy boot.efi (generated in the command above) to a USB stick for use later in OS X.
 *** 12. Setup boot in OS X
 Exit everything and reboot into OS X (by holding alt/option) and
 then choosing it.
@@ -137,6 +138,19 @@ nano SystemVersion.plist
     <string>Arch Linux</string>
 </dict>
 </plist>
+#+end_example
+Copy boot.efi from your USB stick to this CoreServices directory. 
+The tree should look like this:
+#+begin_example
+|___mach_kernel
+|___System
+       |
+       |___Library
+              |
+              |___CoreServices
+                      |
+                      |___SystemVersion.plist
+                      |___boot.efi
 #+end_example
 *** 15. Make Boot Loader partition bootable
 #+begin_src sh
