--- a/README.org
+++ b/README.org
@@ -143,7 +143,7 @@ touch SystemVersion.plist
 nano SystemVersion.plist
 #+end_src
 #+begin_example
-<xml version="1.0" encoding="utf-8"?>
+<xml version="1.0" encoding="utf-8"/>
 <plist version="1.0">
 <dict>
     <key>ProductBuildVersion</key>
